# iotdata-example

./: Makefile
gateway_mqtt_lora_linux/: .gitignore  Makefile
simulator/: Makefile  iotdata_variant_simulator.c  iotdata_variant_simulator.h
simulator_sensor_lora_esp32/: Makefile  sdkconfig.defaults
simulator_sensor_lora_esp32/assets/: gen_lora_i2c-revision-2.epro  gen_lora_i2c_case.scad  gen_lora_i2c_case_base.stl  gen_lora_i2c_case_top.stl
simulator_sensor_lora_esp32/main/: CMakeLists.txt  app.c
